--- a/ui/src/app/cohort-search/overview/overview.component.html
+++ b/ui/src/app/cohort-search/overview/overview.component.html
@@ -72,7 +72,7 @@
         [class.show]="(name.dirty || name.touched) && cohortForm.invalid">
         <em>*A Cohort Name is Required</em>
       </label>
-      <div class="name-area" style="position: relative;">
+      <div class="name-area">
         <input
           name="name"
           id="name-control"
@@ -82,7 +82,7 @@
           type="text"
           [class.invalid]="(name.dirty || name.touched) && cohortForm.invalid"
           (input)="showConflictError = false"
-          [ngClass]="{alreadyTaken: showConflictError}"
+          [class.alreadyTaken]="showConflictError"
           autofocus>
         <clr-icon shape="warning-standard" class="warning-standard is-solid" *ngIf="showConflictError"></clr-icon>
         <div *ngIf="showConflictError" class="error">
