--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -1,36 +1,76 @@
 <form [formGroup]="form">
   <section class="form-block">
-    <label>The Following Modifiers are Optional</label>
-    <div *ngFor="let mod of modifiers"
-      class="form-group" [formGroupName]="mod.name">
-      <label [for]="mod.name">{{ mod.label }}</label>
-      <div class="select">
-        <select formControlName="operator">
-          <option *ngFor="let opt of mod.operators" [value]="opt.value">
-            {{ opt.name}}
-          </option>
-        </select>
-      </div>
-      <input formControlName="valueA" [type]="mod.inputType">
-      <input *ngIf="showValueB(mod.name)"
-        formControlName="valueB" [type]="mod.inputType">
+    <div class="modifier-header">
+      The Following Modifiers are Optional
+    </div>
+    <div *ngFor="let mod of modifiers; let i = index" [formGroupName]="mod.name">
+      <label class="modifier-event-header" [for]="mod.name">{{ mod.label }}</label>
+        <div class="container">
+          <div class="row"  >
+            <div class="col col-lg-4">
+              <div class="">
+                <clr-dropdown >
+                  <button type="button" class="btn btn-outline" clrDropdownTrigger>
+                   hi {{i}}
+                    <span *ngIf = "dropdownOption.selected[i] !== ''; else elseBlock">{{dropdownOption.selected[i]}}</span>
+                    <ng-template #elseBlock>
+                      <span>Select Operator</span>
+                    </ng-template>
+                    <clr-icon shape="caret down"></clr-icon>
+                  </button>
+                  <clr-dropdown-menu  clrPosition="bottom-left" *clrIfOpen>
+                    <button
+                            *ngFor="let opt of mod.operators"
+                            [value]="opt.value"
+                            (click)="selectChange(opt, i)"
+                            class="dropdown-item"
+                            type="button"
+                            clrDropdownItem>{{ opt.name}}</button>
+                  </clr-dropdown-menu>
+                </clr-dropdown>
+              </div>
+            </div>
+            <div class="col col-lg-2 ">
+              <div class="">
+                <input *ngIf = "mod.inputType !== 'date'" class="modifier-event-indicator" formControlName="valueA" [type]="mod.inputType">
+              </div>
+              <div *ngIf = "mod.inputType === 'date'" >
+                <input class="modifier-calender" formControlName="valueA" [type]="mod.inputType" type="date" clrDate>
+              </div>
+
+              <div class="" *ngIf="showValueB(mod.name)">
+                <input class="modifier-event-indicator"
+                       formControlName="valueB" [type]="mod.inputType">
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 </form>
-
-<div class="count-preview">
-  <button type="button"
-    class="btn"
-    (click)="requestPreview()"
-    [clrLoading]="preview.get('requesting', false)"
-    >
-    Calculate
-  </button>
-  Number Participants:
-  <span *ngIf="!preview.get('requesting')">
-    {{ preview.get('count', 0) }}
-  </span>
-  <span *ngIf="preview.get('requesting')" class="spinner spinner-inline">
-    Loading...
-  </span>
+<div class="container count-preview ">
+  <div class="row">
+    <div class="col-lg-2 ">
+      <button type="button"
+              class="btn calculate-btn"
+              (click)="requestPreview()"
+              [clrLoading]="preview.get('requesting', false)">
+        Calculate
+      </button>
+    </div>
+    <div class="spin-top-padding">
+      <span *ngIf="preview.get('requesting')" class="spinner spinner-inline"> Loading...   </span>
+    </div>
+    <div class="col-lg-8 text-padding" *ngIf="preview.get('count')">
+      <div class="result-text">
+        Results
+      </div>
+      <div >
+        Number Participants:
+        <span class="text-bold" *ngIf="!preview.get('requesting')">
+             {{ preview.get('count', 0) }}
+        </span>
+      </div>
+    </div>
+  </div>
 </div>
