--- a/public-ui/src/app/views/pm/pm.component.html
+++ b/public-ui/src/app/views/pm/pm.component.html
@@ -1,46 +1,50 @@
 <div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-8">
 
-  <div class="col-xs-12">
     <div class="page-header">
       <div>
-        <h2> {{title}} Survey Module </h2>
-        <h4 class="view-sub-title">{{subtitle}} </h4>
+        <h2> {{title}} </h2>
       </div>
     </div>
-  </div>
 
-</div>
-
-
-<div class="row">
-  <div *ngFor="let item of conceptGroups" class="button-item">
-    <button (click)="showMeasurement(item, item.concepts[0])" class="btn btn-primary">{{item.groupName}}</button>
-  </div>
-</div>
-
-<div *ngIf="!loading" class="measurement white-card-box ">
-  <div class="row box-title">
-    <div class="col-md-6">
-      <h5 class="box-title"> {{selectedGroup.groupName}}</h5>
+    <div class="row">
+      <div *ngFor="let item of conceptGroups" class="button-item">
+        <button (click)="showMeasurement(item, item.concepts[0])" class="btn btn-primary">{{item.groupName}}</button>
+      </div>
     </div>
-    <div *ngIf="selectedGroup.concepts.length > 1" class="col-md-6 btn-group btn-link">
-      <button *ngFor="let c of selectedGroup.concepts" (click)="showMeasurement(selectedGroup, c)" class="btn">{{c.conceptName}}</button>
-    </div>
-  </div>
-  <div class="row" >
-    <div *ngIf="selectedConcept.analyses && selectedConcept.analyses.measurementValueMaleAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
-      <app-chart [chartTitle]="'Male '" [chartType]="'histogram'" [analysis]="selectedConcept.analyses.measurementValueMaleAnalysis"></app-chart>
-    </div>
-    <div *ngIf="selectedConcept.analyses && selectedConcept.analyses.measurementValueFemaleAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
-      <app-chart [chartTitle]="'Female ' " [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueFemaleAnalysis"></app-chart>
-    </div>
-  </div>
-</div>
 
-<div class="row">
-  <p>
-    <a target="_blank" href="https://projects.invisionapp.com/d/main/default/#/console/13577480/306624424/preview" >
-    Link to Mock Up
-    </a>
-  </p>
+    <div *ngIf="!loading()" class="measurement white-card-box ">
+      <div class="row box-title">
+        <div class="col-md-6">
+          <h5 class="box-title"> {{selectedGroup.groupName}}</h5>
+        </div>
+        <div *ngIf="selectedGroup.concepts.length > 1" class="col-md-6 btn-group btn-link">
+          <button *ngFor="let c of selectedGroup.concepts" (click)="showMeasurement(selectedGroup, c)" class="btn">{{c.conceptName}}</button>
+        </div>
+      </div>
+      <div class="row" *ngIf="selectedConcept.analyses.genderAnalysis" >
+
+        <!-- Loop through the genders we have results for showing the graph -->
+        <div *ngFor="let gender of selectedConcept.analyses.genderAnalysis.results;">
+          <div *ngIf="gender.stratum2 === MALE_GENDER_ID && selectedConcept.analyses && selectedConcept.analyses.measurementValueMaleAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
+            <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="'histogram'" [analysis]="selectedConcept.analyses.measurementValueMaleAnalysis"></app-chart>
+          </div>
+          <div *ngIf="gender.stratum2 === FEMALE_GENDER_ID && selectedConcept.analyses && selectedConcept.analyses.measurementValueFemaleAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
+            <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueFemaleAnalysis"></app-chart>
+          </div>
+          <div *ngIf="gender.stratum2 === OTHER_GENDER_ID && selectedConcept.analyses && selectedConcept.analyses.measurementValueOtherGenderAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
+            <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueOtherGenderAnalysis"></app-chart>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <p>
+        <a target="_blank" href="https://projects.invisionapp.com/d/main/default/#/console/13577480/306624424/preview" >
+        Link to Mock Up
+        </a>
+      </p>
+    </div>
+  </div>
 </div>
