--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -75,7 +75,7 @@
         [options]="genderNodes"
         [includeSearchBox]="false"
         [initialSelection]="initialGenders"
-        >
+        [loading]="loading">
       </crit-multi-select>
     </div>
   </div>
@@ -92,7 +92,7 @@
       <crit-multi-select
         [options]="raceNodes"
         [initialSelection]="initialRaces"
-        >
+        [loading]="loading">
       </crit-multi-select>
     </div>
   </div>
@@ -109,7 +109,7 @@
       <crit-multi-select
         [options]="ethnicityNodes"
         [initialSelection]="initialEthnicities"
-        >
+        [loading]="loading">
       </crit-multi-select>
     </div>
   </div>
